// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0>.emotion-3 {
  color: #3f4250;
}

.emotion-0>.emotion-3::-webkit-input-placeholder {
  color: #727683;
}

.emotion-0>.emotion-3::-moz-placeholder {
  color: #727683;
}

.emotion-0>.emotion-3:-ms-input-placeholder {
  color: #727683;
}

.emotion-0>.emotion-3::placeholder {
  color: #727683;
}

.emotion-0[data-success='true'] {
  border-color: #22674e;
}

.emotion-0[data-error='true'] {
  border-color: #b3144d;
}

.emotion-0[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true']>.emotion-3 {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3::placeholder {
  color: #b5b7bd;
}

.emotion-0:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-2[data-size='large'] {
  font-size: 1rem;
}

.emotion-2[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-0 emotion-1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <input
              aria-invalid="false"
              class="emotion-2 emotion-3"
              data-size="large"
              id="«r0»"
              name="test"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly generated 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0>.emotion-3 {
  color: #3f4250;
}

.emotion-0>.emotion-3::-webkit-input-placeholder {
  color: #727683;
}

.emotion-0>.emotion-3::-moz-placeholder {
  color: #727683;
}

.emotion-0>.emotion-3:-ms-input-placeholder {
  color: #727683;
}

.emotion-0>.emotion-3::placeholder {
  color: #727683;
}

.emotion-0[data-success='true'] {
  border-color: #22674e;
}

.emotion-0[data-error='true'] {
  border-color: #b3144d;
}

.emotion-0[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true']>.emotion-3 {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-0[data-disabled='true']>.emotion-3::placeholder {
  color: #b5b7bd;
}

.emotion-0:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-2[data-size='large'] {
  font-size: 1rem;
}

.emotion-2[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-4 {
  padding: 0 1rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u3j uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        >
          <label
            class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            for="«r3»"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
          >
            *
          </span>
        </div>
        <div>
          <div
            class="emotion-0 emotion-1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <input
              aria-invalid="false"
              class="emotion-2 emotion-3"
              data-size="large"
              id="«r3»"
              name="test"
              required=""
              type="text"
              value="This is an example"
            />
            <div
              class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            >
              <button
                aria-label="clear value"
                class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
